welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:2: error: not found: value estSurbiscuit
while (!estSurbiscuit()) {
        ^DwarfCode:7: error: not found: value estSurbiscuit
while(estSurbiscuit()) {
      ^