welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (!estSurbiscuit()) {
	droite()
	avance()
	prendBiscuit() 
}
while(estSurbiscuit()) {
	retourne() ;
	
}
